--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,15 @@
-<html>
-<head>
-</head>
+{% extends 'blog/base.html' %}
 
-<body>
-    <p>Hello!</p>
-    <p>It really works!</p>
-</body>
-
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <!--
+            <p>{{ post.text|linebreaksbr }}</p>
+            -->
+        </div>
+    {% endfor %}
+{% endblock %}
