--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,11 +12,10 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+
             {% endif %}
             <h1><a href="{% url 'post_list' %}">کچھ چھوٹی چھوٹی باتیں</a></h1>
-            <!--
-            <h1><a href="">کچھ چھوٹی چھوٹی باتیں</a></h1>
-            -->
         </div>
         <div class="content container">
             <div class="row">
