--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,31 +1,85 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>کچھ چھوٹی چھوٹی باتیں</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="{% static '../favicon.ico' %}">
+
+        <title>A Blog for Mathematics, Poetry and Software</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="{% static 'css/blog.css' %}" rel="stylesheet">
     </head>
 
     <body>
-        <div class="page-header">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-                <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-            {% else %}
-                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> 
-            {% endif %}
-            <h1><a href="{% url 'post_list' %}">کچھ چھوٹی چھوٹی باتیں</a></h1>
+        <div class="blog-masthead">
+          <div class="container">
+            <nav class="blog-nav">
+              <a class="blog-nav-item active" href="./index.html">Home</a>
+              <a class="blog-nav-item" href="./research.html">Research</a>
+              <a class="blog-nav-item" href="./publications.html#">Publications</a>
+              <a class="blog-nav-item" href="./teaching.html">Teaching</a>
+              <a class="blog-nav-item" href="./software.html">Software</a>
+              <a class="blog-nav-item" href="./cv.html">CV</a>
+              <a class="blog-nav-item" href="./music.html#">Music</a>
+              <a class="blog-nav-item" href="./languages.html">Languages</a>
+              <a class="blog-nav-item" href="./poetry.html">Poetry</a>
+              <a class="blog-nav-item" href="./contact.html">Contact</a>
+            </nav>
+          </div>
         </div>
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% block content %}
-                    {% endblock %}
+
+        <div class="container">
+            <!-- TODO how to get space? learn that:( -->
+            <div>
+                <h3> </h3>
+            </div>
+
+
+            <div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                    <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                {% else %}
+                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> 
+                {% endif %}
+                <h1><a href="{% url 'post_list' %}">کچھ چھوٹی چھوٹی باتیں</a></h1>
+            </div>
+
+            <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
-        </div>
-    </body>
+
+    </div><!-- /.container -->
+
+    <footer class="blog-footer">
+      <p>Blog for <a href="http://www.zindajaved.com">zindajaved</a> by <a href="https://github.com/mhsnjvd">@mohsin</a>.</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+  </body>
+</html>
 </html>
