--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,85 +1,99 @@
 {% load staticfiles %}
-<html>
+{% load mathjax %}
+<!DOCTYPE html>
+<html lang="en">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- Add an icon:
+    <link rel="icon" href="../favicon.ico"> 
+    -->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="{% static '../favicon.ico' %}">
+        <title>کچھ چھوٹی چھوٹی باتیں</title>
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
-        <title>A Blog for Mathematics, Poetry and Software</title>
+        {% autoescape off %}
+        {% mathjax_scripts %}
+        {% endautoescape %}
 
-        <!-- Bootstrap core CSS -->
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="{% static 'css/blog.css' %}" rel="stylesheet">
     </head>
 
     <body>
         <div class="blog-masthead">
           <div class="container">
             <nav class="blog-nav">
-              <a class="blog-nav-item active" href="./index.html">Home</a>
-              <a class="blog-nav-item" href="./research.html">Research</a>
-              <a class="blog-nav-item" href="./publications.html#">Publications</a>
-              <a class="blog-nav-item" href="./teaching.html">Teaching</a>
-              <a class="blog-nav-item" href="./software.html">Software</a>
-              <a class="blog-nav-item" href="./cv.html">CV</a>
-              <a class="blog-nav-item" href="./music.html#">Music</a>
-              <a class="blog-nav-item" href="./languages.html">Languages</a>
-              <a class="blog-nav-item" href="./poetry.html">Poetry</a>
-              <a class="blog-nav-item" href="./contact.html">Contact</a>
+              <a class="blog-nav-item active" href="{% static 'index.html' %}">Home</a>
+              <a class="blog-nav-item" href="{% static 'research.html' %}">Research</a>
+              <a class="blog-nav-item" href="{% static 'publications.html' %}">Publications</a>
+              <a class="blog-nav-item" href="{% static 'teaching.html' %}">Teaching</a>
+              <a class="blog-nav-item" href="{% static 'software.html' %}">Software</a>
+              <a class="blog-nav-item" href="{% static 'cv.html' %}">CV</a>
+              <a class="blog-nav-item" href="{% static 'music.html' %}">Music</a>
+              <a class="blog-nav-item" href="{% static 'languages.html' %}">Languages</a>
+              <a class="blog-nav-item" href="{% static 'poetry.html' %}">Poetry</a>
+              <a class="blog-nav-item" href="{% static 'contact.html' %}">Contact</a>
+              <a class="blog-nav-item" href="{% static 'contact.html' %}">Contact</a>
             </nav>
           </div>
         </div>
 
-        <div class="container">
-            <!-- TODO how to get space? learn that:( -->
-            <div>
-                <h3> </h3>
-            </div>
+        <div class="page-header">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> 
+            {% endif %}
+            <h1 dir='rtl'><a href="{% url 'post_list' %}">کچھ چھوٹی چھوٹی باتیں</a></h1>
+        </div>
 
+        <div class="content container">
+            <div class="row">
 
-            <div class="page-header">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-                    <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-                {% else %}
-                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> 
-                {% endif %}
-                <h1><a href="{% url 'post_list' %}">کچھ چھوٹی چھوٹی باتیں</a></h1>
-            </div>
-
-            <div class="content container">
-                <div class="row">
-                    <div class="col-md-8">
-                        {% block content %}
-                        {% endblock %}
-                    </div>
+                <div class="col-sm-8 blog-main">
+                    {% block content %}
+                    {% endblock %}
                 </div>
             </div>
 
-    </div><!-- /.container -->
+            <div class="row">
 
-    <footer class="blog-footer">
-      <p>Blog for <a href="http://www.zindajaved.com">zindajaved</a> by <a href="https://github.com/mhsnjvd">@mohsin</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
+                <p>
+                When $$a \ne 0,$$ there are two solutions to 
+                the equation $$ax^2 + bx + c = 0$$ and they are
+                $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+                </p>
+
+                <p>
+                Perhaps one of the most beautiful equations of 
+                mathematics is $$\int_{\Gamma} f(z) \:dz = 0.$$
+                </p>
+
+            </div>
+        </div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-  </body>
-</html>
+        <footer class="blog-footer">
+        <p>Blog for <a href="{% url 'home' %}">zindajaved</a> by <a href="https://github.com/mhsnjvd">@mohsin</a>.</p>
+          <p>
+            <a href="#">Back to top</a>
+          </p>
+        </footer>
+
+
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+      </body>
 </html>
