trhing to start the blog properly

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -66,10 +66,13 @@
             <div class="row">
 
                 <p>
-                When $$a \ne 0,$$ there are two solutions to 
-                the equation $$ax^2 + bx + c = 0$$ and they are
-                $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+                Suppose Asma and Babar decide to play a game. 
+                Asma tosses \[n=10\] fair coins while Babar 
+                tosses $n+1=11$ fair coins. The player with 
+                more heads wins the game. What is the
+                probability that Babar wins the game?
                 </p>
+
 
                 <p>
                 Perhaps one of the most beautiful equations of 
