--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,12 +15,14 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <script src="{% static 'js/d3.min.js' %}"></script>
 
         {% autoescape off %}
         {% mathjax_scripts %}
         {% endautoescape %}
 
-        <title>کچھ چھوٹی چھوٹی باتیں</title>
+        <!-- <title>کچھ چھوٹی چھوٹی باتیں</title> -->
+        <title>Blog | zindajaved.com</title>
 
     </head>
 
@@ -78,18 +80,23 @@
                             $$B_n = \text{# of heads thrown by Babar in $n$ tosses}.$$
                         </div>
                         We are trying to find the probability $P(B_{n+1} > A_n)$.
-                        Let us now condition on the first $n$ tosses. Either 
-                        $B_n = A_n$ or $B_n > A_n$. Then by the law of total 
+                        Let us now condition on the first $n$ tosses. If $B_{n+1} > A_n$, 
+                        then either $B_n = A_n$, which means that 
+                        the final toss by Babar decides the game, or 
+                        $B_n > A_n$, in which case Babar has already won 
+                        the game in the first $n$ tosses. 
+                        Mathematically, we can write this using the law of total 
                         probability
-                        $$P(B_{n+1} > A_n) = P(B_{n+1} > A_n | B_n > A_n) + 
-                        P(B_{n+1} > A_n | B_n = A_n).$$
+                        $$P(B_{n+1} > A_n) = P(B_{n+1} > A_n | B_n > A_n) P(B_n > A_n)+ 
+                        P(B_{n+1} > A_n | B_n = A_n)P(B_n = A_n).$$
 
                         <p>
-                        If $B_n > A_n$ then certainly $B_{n+1} > A_n$.
-                        However, if $B_n=A_n$, then $B_{n+1} > A_n$ only if 
-                        Babar's $(n+1)^{st}$ toss is a head and this 
-                        happens with probability $1/2$ since the coin
-                        is fair.
+                        We have 
+                        $$P(B_{n+1} > A_n | B_n > A_n) = 1.$$
+                        However, 
+                        $$P(B_{n+1} > A_n | B_n=A_n ) = 1/2,$$
+                        since Babar's $(n+1)^{st}$ toss is a head only 
+                        with probability $1/2$.
                         </p>
 
                         We can therefore write
@@ -116,14 +123,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
 
 
 
