--- a/vis/templates/vis/base.html
+++ b/vis/templates/vis/base.html
@@ -14,9 +14,10 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/d3.css' %}">
         <script src="{% static 'js/d3.min.js' %}"></script>
+        <script src="{% static 'js/d3-tip.js' %}"></script>
         <script src="{% static 'js/plots.js' %}"></script>
-
         <title>Visualization | zindajaved.com</title>
     </head>
 
@@ -76,6 +77,7 @@
         <div class="content container">
             <div class="row">
                 <div class="col-sm blog-main">
+                    <svg id="companySVG" height="450" width="900"></svg>
                     {% block company_visualization %}
                     {% endblock %}
                 </div>
