--- a/vis/templates/vis/company_visualization.html
+++ b/vis/templates/vis/company_visualization.html
@@ -21,6 +21,50 @@
 {% endblock %}
 
 {% block company_visualization %}
+
+    <script type="text/javascript">
+    function plotHistogramOnSVG(svg, xData, yData)
+    {
+      svg.selectAll("*").remove();
+      svg.style("background-color", "white"); 
+      var height = +svg.attr("height");
+      var width  = +svg.attr("width");
+
+      var margin = defineMargins(height, width);
+      
+      // Global maximum
+      var maxYData = d3.max(yData);
+
+      var minYData = d3.min(yData);
+
+       // x scale and width gap:
+      var xScale = d3.scale.ordinal()
+             .domain(d3.range(xData.length))
+             .rangeRoundBands( [margin.left, width - margin.right], .6 );
+
+      var yScale = d3.scale.linear()
+                   .domain([minYData, maxYData])
+                   .range([height-margin.top,  margin.bottom]);
+      var hScale = d3.scale.linear()
+                   .domain([minYData, maxYData])
+                   .range([0, height-margin.top - margin.bottom]); 
+
+      plotHorisontalGrid( svg, margin, 10);
+      var bars = plotHistogram( svg, margin, xData, yData, xScale, yScale, hScale);          
+
+      plotXAxis(svg, margin, xData, xScale );
+      addTitle(svg, "PV of Residual Income and ROE");
+      plotYAxis(svg, margin, yScale);
+      plotYLabel(svg, margin, "$");         
+    }
+
+    var svg = d3.select(document.getElementById("companySVG"));
+    var xData = []; 
+    var N = 35;
+    for(var i = 0; i < N; i++){ xData.push(i); }
+    var yData = xData.map(function(x){return Math.random();});
+    plotHistogramOnSVG(svg, xData, yData);
+    </script>
      <p>The internal rate of return for 
      {{ data.company_name }} (ticker: {{ data.ticker }}) is {{ data.irr_pct_str }}<br>
      </p>
