--- a/vis/templates/vis/company_visualization.html
+++ b/vis/templates/vis/company_visualization.html
@@ -22,48 +22,60 @@
 
 {% block company_visualization %}
 
-    <script type="text/javascript">
-    function plotHistogramOnSVG(svg, xData, yData)
-    {
-      svg.selectAll("*").remove();
-      svg.style("background-color", "white"); 
-      var height = +svg.attr("height");
-      var width  = +svg.attr("width");
+    {{ data.df_json|json_script:"vis-json-values" }}
+    {{ data.df_column_names|json_script:"vis-json-column-names" }}
+    {{ data.df_html|json_script:"vis-html-data" }}
 
-      var margin = defineMargins(height, width);
+    <script id="vis-json-values" type="application/json"></script> 
+    <script id="vis-json-column-names" type="application/json"></script> 
+    <script id="vis-html-data" type="application/json"></script> 
+
+    <script type="text/javascript">
+
+    var df_json_value = JSON.parse(JSON.parse(document.getElementById('vis-json-values').textContent));
+    var yBarData = df_json_value.map(function(x){return x['PV residual income (LHS)'];})
+    var yLineData = df_json_value.map(function(x){return x['ROE (RHS)'];})
+    var xData = yBarData.map(function(_,i){return(i);});
+    var df_column_names  = JSON.parse(document.getElementById('vis-json-column-names').textContent);
+
+    var svg = d3.select(document.getElementById("companySVG"));
+    svg.selectAll("*").remove();
+    svg.style("background-color", "white"); 
+    var height = +svg.attr("height");
+    var width  = +svg.attr("width");
+
+    var margin = defineMargins(height, width);
       
       // Global maximum
-      var maxYData = d3.max(yData);
+    var maxYData = d3.max(yBarData);
 
-      var minYData = d3.min(yData);
+    var minYData = d3.min(yBarData);
 
-       // x scale and width gap:
-      var xScale = d3.scale.ordinal()
+    // x scale and width gap:
+    var xScale = d3.scale.ordinal()
              .domain(d3.range(xData.length))
              .rangeRoundBands( [margin.left, width - margin.right], .6 );
 
-      var yScale = d3.scale.linear()
+    var yScale = d3.scale.linear()
                    .domain([minYData, maxYData])
                    .range([height-margin.top,  margin.bottom]);
-      var hScale = d3.scale.linear()
+    var hScale = d3.scale.linear()
                    .domain([minYData, maxYData])
                    .range([0, height-margin.top - margin.bottom]); 
 
-      plotHorisontalGrid( svg, margin, 10);
-      var bars = plotHistogram( svg, margin, xData, yData, xScale, yScale, hScale);          
+    plotHorisontalGrid( svg, margin, 10);
+    var bars = plotHistogram( svg, margin, xData, yBarData, xScale, yScale, hScale);          
 
-      plotXAxis(svg, margin, xData, xScale );
-      addTitle(svg, "PV of Residual Income and ROE");
-      plotYAxis(svg, margin, yScale);
-      plotYLabel(svg, margin, "$");         
-    }
+    plotXAxis(svg, margin, xData, xScale );
+    addTitle(svg, "PV of Residual Income and ROE");
+    plotYAxis(svg, margin, yScale);
+    plotYLabel(svg, margin, "$");         
 
-    var svg = d3.select(document.getElementById("companySVG"));
-    var xData = []; 
-    var N = 35;
-    for(var i = 0; i < N; i++){ xData.push(i); }
-    var yData = xData.map(function(x){return Math.random();});
-    plotHistogramOnSVG(svg, xData, yData);
+    var xData = yLineData.map(function(_,i){return(i);});
+    scalar = yBarData[0]/yLineData[0];
+    yLineDataScaled = yLineData.map(function(d){return scalar * d;});
+    plotLine( svg, margin, xData, yLineDataScaled, xScale, yScale, "maroon")
+    
     </script>
      <p>The internal rate of return for 
      {{ data.company_name }} (ticker: {{ data.ticker }}) is {{ data.irr_pct_str }}<br>
