add sector information

--- a/vis/templates/vis/company_visualization.html
+++ b/vis/templates/vis/company_visualization.html
@@ -16,7 +16,8 @@
 
 {% block company_data %}
      <p>The internal rate of return for 
-     {{ data.company_name }} (ticker: {{ data.ticker }}) is {{ data.irr_pct_str }}<br>
+     {{ data.company_name }} (ticker: {{ data.ticker }}, sector: {{ data.sector }}) 
+     is {{ data.irr_pct_str }}<br>
      </p>
 {% endblock %}
 
