--- a/vis/templates/vis/base.html
+++ b/vis/templates/vis/base.html
@@ -104,10 +104,13 @@
 
 
 
-        <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript needed
+        ****** The order is important here, first jquery, then popper and then 
+        bootstrap **************
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
