--- a/vis/templates/vis/company_visualization.html
+++ b/vis/templates/vis/company_visualization.html
@@ -36,7 +36,7 @@
     var df_json_value  = JSON.parse(JSON.parse(document.getElementById('vis-json-values').textContent));
     var yBarData       = df_json_value.map(function(x){return x['PV residual income (LHS)'];})
     var yLineDataInPct = df_json_value.map(function(x){return x['ROE (RHS)'] * 100.0;})
-    var xData = yBarData.map(function(_,i){return(i);});
+    var xData          = yBarData.map(function(_,i){return(i+1);});
     //var df_column_names  = JSON.parse(document.getElementById('vis-json-column-names').textContent);
 
     var svg = d3.select(document.getElementById("companySVG"));
@@ -53,6 +53,12 @@
                  .domain(d3.range(xData.length))
                  .rangeRound([margin.left, width - margin.right])
                  .padding(0.1);
+
+    var xAxisScale = d3.scaleBand()
+                 .domain(xData)
+                 .rangeRound([margin.left, width - margin.right])
+                 .padding(0.1);
+
     // Global maximum
     var maxYData = d3.max(yBarData);
     var minYData = d3.min(yBarData);
@@ -71,24 +77,29 @@
                    .domain([minYData, maxYData])
                    .range([height-margin.top,  margin.bottom]);
 
-    // Plot a horizontal grid of 10 lines:
-    var nLines = 10;
-    plotHorisontalGrid(svg, margin, nLines);
-
     // Plot historam
     var bars = plotHistogram(svg, margin, xData, yBarData, xScale, yScaleLeft, hScale);          
 
     // Add titles and axes:
-    svg.append("g").attr("transform", "translate(0," + (height - margin.top) + ")").call(d3.axisBottom(xScale));
+    svg.append("g").attr("transform", "translate(0," + (height - margin.top) + ")").call(d3.axisBottom(xAxisScale));
     svg.append("g").attr("transform", "translate(" + margin.left +  ",0)").call(d3.axisLeft(yScaleLeft));
     svg.append("g").attr("transform", "translate(" + (width - margin.right) +  ",0)").call(d3.axisRight(yScaleRight));
     addTitle(svg, "PV of Residual Income and ROE");
+
+
+    svg.append("text")
+       .attr("transform", "translate(" + (width/2) + " ," + (height - margin.top/4) + ")")
+       .style("text-anchor", "middle")
+       .text("Years");
+
     plotYLabel(svg, margin, "PV in $");         
+
+
     var xShift = width - margin.right
     plotYLabel(svg, margin, "ROE (%)", xShift);         
 
     // Add on top a line graph
-    xData = yLineDataInPct.map(function(_,i){return(i);});
+    xData = yLineDataInPct.map(function(_,i){return(i+1);});
     plotLine(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "maroon")
     // Add on top circles for (x,y) pairs:
     plotCircles(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "green")
