--- a/vis/templates/vis/company_visualization.html
+++ b/vis/templates/vis/company_visualization.html
@@ -22,7 +22,6 @@
 {% endblock %}
 
 {% block company_visualization %}
-
     {{ data.df_json|json_script:"vis-json-values" }}
     {{ data.df_column_names|json_script:"vis-json-column-names" }}
     {{ data.df_html|json_script:"vis-html-data" }}
@@ -86,28 +85,93 @@
     svg.append("g").attr("transform", "translate(" + (width - margin.right) +  ",0)").call(d3.axisRight(yScaleRight));
     addTitle(svg, "PV of Residual Income and ROE");
 
-
     svg.append("text")
        .attr("transform", "translate(" + (width/2) + " ," + (height - margin.top/4) + ")")
        .style("text-anchor", "middle")
        .text("Years");
 
-    plotYLabel(svg, margin, "PV in $");         
-
+    plotYLabel(svg, margin, "PV ($)");         
 
     var xShift = width - margin.right
     plotYLabel(svg, margin, "ROE (%)", xShift);         
 
     // Add on top a line graph
     xData = yLineDataInPct.map(function(_,i){return(i+1);});
-    plotLine(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "maroon")
+    plotLine(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "red")
     // Add on top circles for (x,y) pairs:
-    plotCircles(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "green")
+    plotCircles(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "red")
     
     </script>
      <p>The internal rate of return for 
      {{ data.company_name }} (ticker: {{ data.ticker }}) is {{ data.irr_pct_str }}<br>
      </p>
+{% endblock %}
+
+{% block sector_visualization %}
+    <script type="text/javascript">
+    var svg = d3.select(document.getElementById("sectorSVG"));
+    svg.selectAll("*").remove();
+    svg.style("background-color", "white"); 
+    var height = +svg.attr("height");
+    var width  = +svg.attr("width");
+
+    var margin = defineMargins(height, width);
+      
+
+    // x scale and width gap:
+    var xScale = d3.scaleBand()
+                 .domain(d3.range(xData.length))
+                 .rangeRound([margin.left, width - margin.right])
+                 .padding(0.1);
+
+    var xAxisScale = d3.scaleBand()
+                 .domain(xData)
+                 .rangeRound([margin.left, width - margin.right])
+                 .padding(0.1);
+
+    // Global maximum
+    var maxYData = d3.max(yBarData);
+    var minYData = d3.min(yBarData);
+    var yScaleLeft = d3.scaleLinear()
+                   .domain([minYData, maxYData])
+                   .range([height-margin.top,  margin.bottom]);
+
+    var hScale = d3.scaleLinear()
+                   .domain([minYData, maxYData])
+                   .range([0, height-margin.top - margin.bottom]); 
+
+    // make another y scale
+    maxYData = d3.max(yLineDataInPct);
+    minYData = d3.min(yLineDataInPct);
+    var yScaleRight = d3.scaleLinear()
+                   .domain([minYData, maxYData])
+                   .range([height-margin.top,  margin.bottom]);
+
+    // Plot historam
+    var bars = plotHistogram(svg, margin, xData, yBarData, xScale, yScaleLeft, hScale);          
+
+    // Add titles and axes:
+    svg.append("g").attr("transform", "translate(0," + (height - margin.top) + ")").call(d3.axisBottom(xAxisScale));
+    svg.append("g").attr("transform", "translate(" + margin.left +  ",0)").call(d3.axisLeft(yScaleLeft));
+    svg.append("g").attr("transform", "translate(" + (width - margin.right) +  ",0)").call(d3.axisRight(yScaleRight));
+    addTitle(svg, "PV of Residual Income and ROE");
+
+    svg.append("text")
+       .attr("transform", "translate(" + (width/2) + " ," + (height - margin.top/4) + ")")
+       .style("text-anchor", "middle")
+       .text("Years");
+
+    plotYLabel(svg, margin, "PV ($)");         
+
+    var xShift = width - margin.right
+    plotYLabel(svg, margin, "ROE (%)", xShift);         
+
+    // Add on top a line graph
+    xData = yLineDataInPct.map(function(_,i){return(i+1);});
+    plotLine(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "red")
+    // Add on top circles for (x,y) pairs:
+    plotCircles(svg, margin, xData, yLineDataInPct, xScale, yScaleRight, "red")
+    </script>
 {% endblock %}
 
 {% block company_data_frame %}
