added sector comparison visualization

--- a/vis/templates/vis/base.html
+++ b/vis/templates/vis/base.html
@@ -87,6 +87,18 @@
 
             <h2>Sector Comparison</h2>
             <br>
+
+            <!---
+            <div class="row">
+                <div class="col-sm-2 blog-main">
+                    <button id="byKey" type="button" class="btn btn-primary">Sort by Name</button>
+                </div>
+                <div class="col-sm-2 blog-main">
+                    <button id="byValue" type="button" class="btn btn-primary">Sort by Value</button>
+                </div>
+            </div>
+            <br>
+            -->
             <div class="row">
                 <div class="col-sm blog-main">
                     <svg id="sectorSVG" height="400" width="800"></svg>
@@ -96,9 +108,9 @@
             </div>
         </div>
 
-        <br>
-
         <div class="content container">
+            <h2>Long Term Growth Data Frame</h2>
+            <br>
             <div class="row">
                 <div class="col-sm blog-main">
                     {% block company_data_frame %}
